--- a/src/pool.ipynb
+++ b/src/pool.ipynb
@@ -105,26 +105,22 @@
     "\n",
     "    lp: str\n",
     "    type: int\n",
-    "    token0: Token\n",
-    "    token1: Token\n",
+    "    token0_address: str\n",
+    "    token1_address: str\n",
     "    is_stable: bool\n",
     "    # concentrated liquidity pools\n",
     "    is_cl: bool\n",
-    "    symbol: str\n",
     "\n",
     "    @classmethod\n",
-    "    def from_tuple(cls, t: Tuple, tokens: Dict[str, Token]) -> Optional[\"LiquidityPoolForSwap\"]:\n",
+    "    def from_tuple(cls, t: Tuple) -> \"LiquidityPoolForSwap\":\n",
     "        token0, token1, pool_type = normalize_address(t[2]), normalize_address(t[3]), t[1]\n",
-    "        token0, token1 = tokens.get(token0), tokens.get(token1)\n",
-    "        if not token0 or not token1: return None\n",
     "        return LiquidityPoolForSwap(\n",
     "            lp=normalize_address(t[0]),\n",
     "            type=pool_type,\n",
-    "            token0=token0,\n",
-    "            token1=token1,\n",
+    "            token0_address=token0,\n",
+    "            token1_address=token1,\n",
     "            is_stable=pool_type == 0,\n",
-    "            is_cl=pool_type > 0,\n",
-    "            symbol=symbol(token0, token1, pool_type)\n",
+    "            is_cl=pool_type > 0\n",
     "        )\n",
     "\n",
     "        \n",
