--- a/src/quote.ipynb
+++ b/src/quote.ipynb
@@ -64,11 +64,11 @@
     "    types, values = reduce(lambda s, pool: s + pool, [[\"address\", \"int24\"] for i in range(len(path))], []) + [\"address\"], []\n",
     "    for node in path:\n",
     "        pool, reversed = node\n",
-    "        token0, token1 = pool.token0 if not reversed else pool.token1, pool.token1 if not reversed else pool.token0\n",
+    "        token0, token1 = pool.token0_address if not reversed else pool.token1_address, pool.token1_address if not reversed else pool.token0_address\n",
     "        if pool.type > 0: filler = pool.type\n",
     "        else: filler =  QUOTER_STABLE_POOL_FILLER if pool.is_stable else QUOTER_VOLATILE_POOL_FILLER\n",
-    "        if len(values) == 0: values = [token0.token_address, filler, token1.token_address]\n",
-    "        else: values += [filler, token1.token_address]\n",
+    "        if len(values) == 0: values = [token0, filler, token1]\n",
+    "        else: values += [filler, token1]\n",
     "    return PreparedRoute(types=types, values=values)\n",
     "\n",
     "@dataclass\n",
@@ -86,7 +86,17 @@
     "    def route(self) -> PreparedRoute: return pack_path(self.path)\n",
     "\n",
     "@dataclass\n",
-    "class Quote: input: QuoteInput; amount_out: int"
+    "class Quote:\n",
+    "    input: QuoteInput; amount_out: int\n",
+    "\n",
+    "    @property\n",
+    "    def from_token(self) -> Token: return self.input.from_token\n",
+    "    @property\n",
+    "    def to_token(self) -> Token: return self.input.to_token\n",
+    "    @property\n",
+    "    def path(self) -> List[Tuple[LiquidityPoolForSwap, bool]]: return self.input.path\n",
+    "    @property\n",
+    "    def amount_in(self) -> int: return self.input.amount_in"
    ]
   },
   {
@@ -98,9 +108,9 @@
     "from fastcore.test import test_eq\n",
     "\n",
     "path = [\n",
-    "    (LiquidityPoolForSwap(lp='0xec3d9098BD40ec741676fc04D4bd26BCCF592aa3', type=200, token0=Token(token_address='0x4200000000000000000000000000000000000006', symbol='WETH', decimals=18, listed=True, wrapped_token_address=None), token1=Token(token_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', symbol='tBTC', decimals=18, listed=True, wrapped_token_address=None), is_stable=False, is_cl=True, symbol='CL200-WETH/tBTC'), False),\n",
-    "    (LiquidityPoolForSwap(lp='0x02A130b6D35611bC2D90e20f2ceA45431c0A9a8d', type=-1, token0=Token(token_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', symbol='tBTC', decimals=18, listed=True, wrapped_token_address=None), token1=Token(token_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), is_stable=False, is_cl=False, symbol='vAMM-tBTC/USDC'), False),\n",
-    "    (LiquidityPoolForSwap(lp='0xf7a73e1995030B0198f8d6e528a1c42ACEf90a4c', type=0, token0=Token(token_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), token1=Token(token_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', symbol='VELO', decimals=18, listed=True, wrapped_token_address=None), is_stable=True, is_cl=False, symbol='sAMM-USDC/VELO'), False)\n",
+    "    (LiquidityPoolForSwap(lp='0xec3d9098BD40ec741676fc04D4bd26BCCF592aa3', type=200, token0_address='0x4200000000000000000000000000000000000006', token1_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', is_stable=False, is_cl=True, symbol='CL200-WETH/tBTC'), False),\n",
+    "    (LiquidityPoolForSwap(lp='0x02A130b6D35611bC2D90e20f2ceA45431c0A9a8d', type=-1, token0_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', token1_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', is_stable=False, is_cl=False, symbol='vAMM-tBTC/USDC'), False),\n",
+    "    (LiquidityPoolForSwap(lp='0xf7a73e1995030B0198f8d6e528a1c42ACEf90a4c', type=0, token0_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', token1_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', is_stable=True, is_cl=False, symbol='sAMM-USDC/VELO'), False)\n",
     "]\n",
     "\n",
     "rt = pack_path(path)\n",
@@ -112,9 +122,9 @@
     "# test reversed version\n",
     "\n",
     "path = [\n",
-    "    (LiquidityPoolForSwap(lp='0xec3d9098BD40ec741676fc04D4bd26BCCF592aa3', type=200, token0=Token(token_address='0x4200000000000000000000000000000000000006', symbol='WETH', decimals=18, listed=True, wrapped_token_address=None), token1=Token(token_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', symbol='tBTC', decimals=18, listed=True, wrapped_token_address=None), is_stable=False, is_cl=True, symbol='CL200-WETH/tBTC'), True),\n",
-    "    (LiquidityPoolForSwap(lp='0x02A130b6D35611bC2D90e20f2ceA45431c0A9a8d', type=-1, token0=Token(token_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', symbol='tBTC', decimals=18, listed=True, wrapped_token_address=None), token1=Token(token_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), is_stable=False, is_cl=False, symbol='vAMM-tBTC/USDC'), False),\n",
-    "    (LiquidityPoolForSwap(lp='0xf7a73e1995030B0198f8d6e528a1c42ACEf90a4c', type=0, token0=Token(token_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), token1=Token(token_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', symbol='VELO', decimals=18, listed=True, wrapped_token_address=None), is_stable=True, is_cl=False, symbol='sAMM-USDC/VELO'), False)\n",
+    "    (LiquidityPoolForSwap(lp='0xec3d9098BD40ec741676fc04D4bd26BCCF592aa3', type=200, token0_address='0x4200000000000000000000000000000000000006', token1_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', is_stable=False, is_cl=True, symbol='CL200-WETH/tBTC'), True),\n",
+    "    (LiquidityPoolForSwap(lp='0x02A130b6D35611bC2D90e20f2ceA45431c0A9a8d', type=-1, token0_address='0x6c84a8f1c29108F47a79964b5Fe888D4f4D0dE40', token1_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', is_stable=False, is_cl=False, symbol='vAMM-tBTC/USDC'), False),\n",
+    "    (LiquidityPoolForSwap(lp='0xf7a73e1995030B0198f8d6e528a1c42ACEf90a4c', type=0, token0_address='0x7F5c764cBc14f9669B88837ca1490cCa17c31607', token1_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', is_stable=True, is_cl=False, symbol='sAMM-USDC/VELO'), False)\n",
     "]\n",
     "\n",
     "rt = pack_path(path)\n",
