--- a/src/swap.ipynb
+++ b/src/swap.ipynb
@@ -34,15 +34,15 @@
    "source": [
     "#| export\n",
     "\n",
-    "from sugar.quote import Quote\n",
+    "from sugar.token import Token\n",
+    "from sugar.quote import Quote, QuoteInput, pack_path\n",
     "from sugar.helpers import apply_slippage\n",
     "from sugar.pool import LiquidityPoolForSwap\n",
     "from enum import IntEnum\n",
-    "from web3 import Web3\n",
-    "from typing import List, Dict, Any, Union, TypedDict, Optional\n",
+    "from typing import List, Dict, Any, Union, TypedDict, Optional, Tuple\n",
     "from decimal import Decimal\n",
     "import copy\n",
-    "from web3 import Web3\n"
+    "from eth_abi import encode\n"
    ]
   },
   {
@@ -65,53 +65,45 @@
     "# Define ABI types for each command\n",
     "ABI_DEFINITION = {\n",
     "    CommandType.V3_SWAP_EXACT_IN: [\n",
-    "        {\"type\": \"address\"},\n",
-    "        {\"type\": \"uint256\"},\n",
-    "        {\"type\": \"uint256\"},\n",
-    "        {\"type\": \"bytes\"},\n",
-    "        {\"type\": \"bool\"}\n",
+    "        \"address\",\n",
+    "        \"uint256\",\n",
+    "        \"uint256\",\n",
+    "        \"bytes\",\n",
+    "        \"bool\"\n",
     "    ],\n",
     "    CommandType.V2_SWAP_EXACT_IN: [\n",
-    "        {\"type\": \"address\"},\n",
-    "        {\"type\": \"uint256\"},\n",
-    "        {\"type\": \"uint256\"},\n",
-    "        {\"type\": \"tuple[]\", \"components\": [\n",
-    "            {\"type\": \"address\", \"name\": \"from\"},\n",
-    "            {\"type\": \"address\", \"name\": \"to\"},\n",
-    "            {\"type\": \"bool\", \"name\": \"stable\"}\n",
-    "        ]},\n",
-    "        {\"type\": \"bool\"}\n",
+    "        \"address\",\n",
+    "        \"uint256\",\n",
+    "        \"uint256\",\n",
+    "        \"(address,address,bool)[]\",\n",
+    "        \"bool\"\n",
     "    ],\n",
     "    CommandType.V2_SWAP_EXACT_OUT: [\n",
-    "        {\"type\": \"address\"},\n",
-    "        {\"type\": \"uint256\"},\n",
-    "        {\"type\": \"uint256\"},\n",
-    "        {\"type\": \"tuple[]\", \"components\": [\n",
-    "            {\"type\": \"address\", \"name\": \"from\"},\n",
-    "            {\"type\": \"address\", \"name\": \"to\"},\n",
-    "            {\"type\": \"bool\", \"name\": \"stable\"}\n",
-    "        ]},\n",
-    "        {\"type\": \"bool\"}\n",
+    "        \"address\",\n",
+    "        \"uint256\",\n",
+    "        \"uint256\",\n",
+    "        \"(address,address,bool)[]\",\n",
+    "        \"bool\"\n",
     "    ],\n",
     "    CommandType.V3_SWAP_EXACT_OUT: [\n",
-    "        {\"type\": \"address\"},\n",
-    "        {\"type\": \"uint256\"},\n",
-    "        {\"type\": \"uint256\"},\n",
-    "        {\"type\": \"bytes\"},\n",
-    "        {\"type\": \"bool\"}\n",
+    "        \"address\",\n",
+    "        \"uint256\",\n",
+    "        \"uint256\",\n",
+    "        \"bytes\",\n",
+    "        \"bool\"\n",
     "    ],\n",
     "    CommandType.WRAP_ETH: [\n",
-    "        {\"type\": \"address\"},\n",
-    "        {\"type\": \"uint256\"}\n",
+    "        \"address\",\n",
+    "        \"uint256\"\n",
     "    ],\n",
     "    CommandType.UNWRAP_WETH: [\n",
-    "        {\"type\": \"address\"},\n",
-    "        {\"type\": \"uint256\"}\n",
+    "        \"address\",\n",
+    "        \"uint256\"\n",
     "    ],\n",
     "    CommandType.SWEEP: [\n",
-    "        {\"type\": \"address\"},\n",
-    "        {\"type\": \"address\"},\n",
-    "        {\"type\": \"uint256\"}\n",
+    "        \"address\",\n",
+    "        \"address\",\n",
+    "        \"uint256\"\n",
     "    ]\n",
     "}\n",
     "\n",
@@ -120,7 +112,7 @@
     "        \"\"\"Initialize a new RoutePlanner\"\"\"\n",
     "        self.commands = \"0x\"\n",
     "        self.inputs: List[str] = []\n",
-    "        self.web3 = Web3()\n",
+    "        # self.web3 = Web3()\n",
     "\n",
     "    def add_command(self, command_type: CommandType, parameters: List[Any]) -> None:\n",
     "        \"\"\"\n",
@@ -132,31 +124,14 @@
     "        \"\"\"\n",
     "        # Get the ABI definition for this command\n",
     "        abi_types = ABI_DEFINITION[command_type]\n",
-    "        \n",
-    "        # Handle tuple[] encoding for V2 swap commands\n",
-    "        if command_type in [CommandType.V2_SWAP_EXACT_IN, CommandType.V2_SWAP_EXACT_OUT]:\n",
-    "            # For paths parameter (index 3), we need to reformat for web3.py encoding\n",
-    "            paths = parameters[3]\n",
-    "            # No need for custom encoding since web3.py handles tuples properly\n",
-    "        \n",
-    "        # Encode the parameters according to the ABI\n",
-    "        encoded_input = self.web3.codec.encode_abi(abi_types, parameters)\n",
-    "        encoded_hex = encoded_input.hex()\n",
-    "        \n",
-    "        # Add to inputs\n",
-    "        self.inputs.append(encoded_hex)\n",
-    "        \n",
+    "        self.inputs.append(encode(abi_types, parameters))\n",
     "        # Add command byte to commands\n",
     "        command_hex = format(command_type, '02x')\n",
     "        self.commands = self.commands + command_hex\n",
     "\n",
-    "    def get_encoded_commands(self) -> str:\n",
-    "        \"\"\"Get the encoded commands\"\"\"\n",
-    "        return self.commands\n",
+    "    def get_encoded_commands(self) -> str: return self.commands\n",
     "    \n",
-    "    def get_encoded_inputs(self) -> List[str]:\n",
-    "        \"\"\"Get the encoded inputs\"\"\"\n",
-    "        return self.inputs"
+    "    def get_encoded_inputs(self) -> List[str]: return self.inputs"
    ]
   },
   {
@@ -170,25 +145,12 @@
     "# Constants\n",
     "CONTRACT_BALANCE_FOR_V3_SWAPS = int(\"0x8000000000000000000000000000000000000000000000000000000000000000\", 16)\n",
     "\n",
-    "def pack_route(nodes: List[LiquidityPoolForSwap]) -> bytes:\n",
-    "    \"\"\"Pack route elements into bytes format for the router\"\"\"\n",
-    "    # This is a placeholder - actual implementation would depend on how routes are packed\n",
-    "    # For now, we'll just return a simple placeholder bytes object\n",
-    "    return b'0x' + b''.join(bytes.fromhex(node['lp'][2:]) for node in nodes)\n",
-    "\n",
-    "def setup_planner(\n",
-    "    quote: Quote,\n",
-    "    slippage: float,\n",
-    "    account: Optional[str] = None,\n",
-    "    route_planner: Optional[RoutePlanner] = None\n",
-    ") -> RoutePlanner:\n",
+    "def setup_planner(quote: Quote, slippage: float, account: str, router_address) -> RoutePlanner:\n",
     "    \"\"\"Setup route planner with the given quote and chain\"\"\"\n",
     "    \n",
-    "    if route_planner is None: route_planner = RoutePlanner()\n",
-    "    \n",
-    "    router_address = \"addrrrr\" # TODO: <<<< add router address here \n",
+    "    route_planner = RoutePlanner()\n",
     "    min_amount_out = apply_slippage(quote.amount_out, slippage)\n",
-    "    \n",
+    "\n",
     "    # By default money comes from contract\n",
     "    tokens_come_from_contract = False\n",
     "    \n",
@@ -199,109 +161,104 @@
     "        tokens_come_from_contract = True\n",
     "    \n",
     "    # Group nodes by pool type (v2 or v3)\n",
-    "    grouped_nodes: List[List[LiquidityPoolForSwap]] = []\n",
+    "    grouped_nodes: List[List[Tuple[LiquidityPoolForSwap, bool]]] = []\n",
     "    \n",
+    "    # helpers for getting from and to token addresses\n",
+    "    def from_token_address(node: Tuple[LiquidityPoolForSwap, bool]) -> str:\n",
+    "        pool, reversed = node\n",
+    "        return pool.token0_address if not reversed else pool.token1_address\n",
+    "    def to_token_address(node: Tuple[LiquidityPoolForSwap, bool]) -> str:\n",
+    "        pool, reversed = node\n",
+    "        return pool.token1_address if not reversed else pool.token0_address\n",
+    "\n",
+    "\n",
     "    for node in quote.path:\n",
     "        if not grouped_nodes: grouped_nodes.append([node])\n",
-    "        elif node.type < 1:\n",
+    "        elif node[0].type < 1:\n",
     "            # Current node is a v2 pool\n",
-    "            if float(grouped_nodes[-1][0].type) < 1: grouped_nodes[-1].append(node)\n",
+    "            if float(grouped_nodes[-1][0][0].type) < 1: grouped_nodes[-1].append(node)\n",
     "            else: grouped_nodes.append([node])\n",
     "        else:\n",
     "            # Current node is a v3 pool\n",
-    "            if grouped_nodes[-1][0].type >= 1: grouped_nodes[-1].append(node)\n",
+    "            if grouped_nodes[-1][0][0].type >= 1: grouped_nodes[-1].append(node)\n",
     "            else: grouped_nodes.append([node])\n",
     "    \n",
     "    if len(grouped_nodes) == 1:\n",
     "        # All nodes belong to the same pool type\n",
     "        nodes = grouped_nodes[0]\n",
-    "        is_v2_pool = float(nodes[0]['type']) < 1\n",
+    "        is_v2_pool = float(nodes[0][0].type) < 1\n",
     "        \n",
     "        route_planner.add_command(\n",
     "            CommandType.V2_SWAP_EXACT_IN if is_v2_pool else CommandType.V3_SWAP_EXACT_IN,\n",
     "            [\n",
     "                # Where should money go?\n",
-    "                router_address if quote['toToken'].get('wrappedAddress') else account,\n",
-    "                quote['amount'],\n",
+    "                router_address if quote.to_token.wrapped_token_address else account,\n",
+    "                quote.amount_in,\n",
     "                min_amount_out,\n",
     "                [\n",
-    "                    {\n",
-    "                        'from': n['from_'], \n",
-    "                        'to': n['to'], \n",
-    "                        'stable': float(n['type']) == 0\n",
-    "                    } for n in nodes\n",
-    "                ] if is_v2_pool else pack_route(nodes),\n",
+    "                    # from, to, stable\n",
+    "                    (from_token_address(n), to_token_address(n), n[0].is_stable) for n in nodes\n",
+    "                ] if is_v2_pool else pack_path(nodes).encoded,\n",
     "                not tokens_come_from_contract,\n",
     "            ]\n",
     "        )\n",
-    "    #else:\n",
+    "    else:\n",
     "        # Mixed v2 and v3 pools\n",
-    "        # first_batch = grouped_nodes[0]\n",
-    "        # last_batch = grouped_nodes[-1]\n",
-    "        # rest = grouped_nodes[1:-1]\n",
+    "        first_batch = grouped_nodes[0]\n",
+    "        last_batch = grouped_nodes[-1]\n",
+    "        rest = grouped_nodes[1:-1]\n",
     "        \n",
-    "        # # Handle first batch\n",
-    "        # is_first_batch_v2 = float(first_batch[0]['type']) < 1\n",
-    "        # next_batch = rest[0] if rest else last_batch\n",
+    "        # Handle first batch\n",
+    "        is_first_batch_v2 = not first_batch[0][0].is_cl\n",
+    "        next_batch = rest[0] if rest else last_batch\n",
     "        \n",
-    "        # route_planner.add_command(\n",
-    "        #     CommandType.V2_SWAP_EXACT_IN if is_first_batch_v2 else CommandType.V3_SWAP_EXACT_IN,\n",
-    "        #     [\n",
-    "        #         router_address if is_first_batch_v2 else next_batch[0]['lp'],\n",
-    "        #         quote['amount'],\n",
-    "        #         0,  # No expectations on min amount out for first batch\n",
-    "        #         [\n",
-    "        #             {\n",
-    "        #                 'from': n['from_'], \n",
-    "        #                 'to': n['to'], \n",
-    "        #                 'stable': float(n['type']) == 0\n",
-    "        #             } for n in first_batch\n",
-    "        #         ] if is_first_batch_v2 else pack_route(first_batch),\n",
-    "        #         not tokens_come_from_contract,\n",
-    "        #     ]\n",
-    "        # )\n",
+    "        route_planner.add_command(\n",
+    "            CommandType.V2_SWAP_EXACT_IN if is_first_batch_v2 else CommandType.V3_SWAP_EXACT_IN,\n",
+    "            [\n",
+    "                router_address if is_first_batch_v2 else next_batch[0][0].lp,\n",
+    "                quote.amount_in,\n",
+    "                0,  # No expectations on min amount out for first batch\n",
+    "                [\n",
+    "                    # from, to, stable\n",
+    "                    (from_token_address(n), to_token_address(n), n[0].is_stable) for n in first_batch\n",
+    "                ] if is_first_batch_v2 else pack_path(first_batch).encoded,\n",
+    "                not tokens_come_from_contract,\n",
+    "            ]\n",
+    "        )\n",
     "        \n",
-    "        # # Handle middle batches\n",
-    "        # for idx, batch in enumerate(rest):\n",
-    "        #     is_batch_v2 = float(batch[0]['type']) < 1\n",
-    "        #     next_batch = rest[idx + 1] if idx + 1 < len(rest) else last_batch\n",
+    "        # Handle middle batches\n",
+    "        for idx, batch in enumerate(rest):\n",
+    "            is_batch_v2 = not batch[0][0].is_cl\n",
+    "            next_batch = rest[idx + 1] if idx + 1 < len(rest) else last_batch\n",
     "            \n",
-    "        #     route_planner.add_command(\n",
-    "        #         CommandType.V2_SWAP_EXACT_IN if is_batch_v2 else CommandType.V3_SWAP_EXACT_IN,\n",
-    "        #         [\n",
-    "        #             router_address if is_batch_v2 else next_batch[0]['lp'],\n",
-    "        #             0 if is_batch_v2 else CONTRACT_BALANCE_FOR_V3_SWAPS,\n",
-    "        #             0,  # No expectations for middle batches\n",
-    "        #             [\n",
-    "        #                 {\n",
-    "        #                     'from': n['from_'], \n",
-    "        #                     'to': n['to'], \n",
-    "        #                     'stable': float(n['type']) == 0\n",
-    "        #                 } for n in batch\n",
-    "        #             ] if is_batch_v2 else pack_route(batch),\n",
-    "        #             False,  # Money comes from contract\n",
-    "        #         ]\n",
-    "        #     )\n",
+    "            route_planner.add_command(\n",
+    "                CommandType.V2_SWAP_EXACT_IN if is_batch_v2 else CommandType.V3_SWAP_EXACT_IN,\n",
+    "                [\n",
+    "                    router_address if is_batch_v2 else next_batch[0][0].lp,\n",
+    "                    0 if is_batch_v2 else CONTRACT_BALANCE_FOR_V3_SWAPS,\n",
+    "                    0,  # No expectations for middle batches\n",
+    "                    [\n",
+    "                        (from_token_address(n), to_token_address(n), n[0].is_stable) for n in batch\n",
+    "                    ] if is_batch_v2 else pack_path(batch).encoded,\n",
+    "                    False,  # Money comes from contract\n",
+    "                ]\n",
+    "            )\n",
     "        \n",
     "        # # Handle last batch\n",
-    "        # is_last_batch_v2 = float(last_batch[0]['type']) < 1\n",
+    "        is_last_batch_v2 = not last_batch[0][0].is_cl\n",
     "        \n",
-    "        # route_planner.add_command(\n",
-    "        #     CommandType.V2_SWAP_EXACT_IN if is_last_batch_v2 else CommandType.V3_SWAP_EXACT_IN,\n",
-    "        #     [\n",
-    "        #         router_address if quote['toToken'].get('wrappedAddress') else account,\n",
-    "        #         0 if is_last_batch_v2 else CONTRACT_BALANCE_FOR_V3_SWAPS,\n",
-    "        #         min_amount_out,\n",
-    "        #         [\n",
-    "        #             {\n",
-    "        #                 'from': n['from_'], \n",
-    "        #                 'to': n['to'], \n",
-    "        #                 'stable': float(n['type']) == 0\n",
-    "        #             } for n in last_batch\n",
-    "        #         ] if is_last_batch_v2 else pack_route(last_batch),\n",
-    "        #         False,  # Money comes from contract\n",
-    "        #     ]\n",
-    "        # )\n",
+    "        route_planner.add_command(\n",
+    "            CommandType.V2_SWAP_EXACT_IN if is_last_batch_v2 else CommandType.V3_SWAP_EXACT_IN,\n",
+    "            [\n",
+    "                router_address if quote.to_token.wrapped_token_address else account,\n",
+    "                0 if is_last_batch_v2 else CONTRACT_BALANCE_FOR_V3_SWAPS,\n",
+    "                min_amount_out,\n",
+    "                [\n",
+    "                    (from_token_address(n), to_token_address(n), n[0].is_stable) for n in last_batch\n",
+    "                ] if is_last_batch_v2 else pack_path(last_batch).encoded,\n",
+    "                False,  # Money comes from contract\n",
+    "            ]\n",
+    "        )\n",
     "    \n",
     "    # Handle unwrapping WETH if needed\n",
     "    if quote.to_token.wrapped_token_address: route_planner.add_command(CommandType.UNWRAP_WETH, [account, min_amount_out])\n",
